fixed alignment of text to radiobuttons

--- a/WebApp/static/css/main.css
+++ b/WebApp/static/css/main.css
@@ -156,6 +156,7 @@ input[type=radio]{
     border: 0px;
     width: 20%;
     height: 23px;
+    vertical-align:sub;
 }
 
 .header_menu {
